Update and rename talks.html to coursework.html

--- a/_pages/coursework.html
+++ b/_pages/coursework.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Talks and presentations"
-permalink: /talks/
+title: "Coursework"
+permalink: /coursework/
 author_profile: true
 ---
 
